fix the problem of center aligned

--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -1,14 +1,14 @@
 /* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Quicksand:wght@700&display=swap');
 
-/* Global styles */
-* {
+/* Scoped Reset - Only applies to elements inside .login-page-wrapper */
+.login-page-wrapper * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-body, html {
+.login-page-wrapper {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   display: flex;
@@ -20,7 +20,8 @@ body, html {
   background-color: #f2f2f2;
 }
 
-.container {
+/* Add unique prefix 'login-' to class names */
+.login-container {
   display: flex;
   width: 100vw;
   height: 100vh;
@@ -30,7 +31,8 @@ body, html {
   background-color: #f8f3eb;
 }
 
-.left-box, .right-box {
+.login-left-box,
+.login-right-box {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -38,18 +40,18 @@ body, html {
   justify-content: center;
 }
 
-.left-box {
+.login-left-box {
   position: relative;
   background-color: #f8f3eb;
 }
 
-.main-picture {
+.login-main-picture {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.logo {
+.login-logo {
   position: absolute;
   top: 20px;
   left: 20px;
@@ -61,7 +63,7 @@ body, html {
   border-radius: 5px;
 }
 
-.right-box {
+.login-right-box {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -86,22 +88,23 @@ body, html {
 /* Title styling */
 .login-title {
   font-family: 'Quicksand', sans-serif;
-  font-size: 32px; /* Increase the font size */
+  font-size: 32px;
   font-weight: 700;
   color: #6d5d4b;
-  margin-bottom: 20px; /* Adjust space below the title as needed */
+  margin-bottom: 20px;
   text-transform: uppercase;
   text-align: center;
-  text-decoration: underline; /* Adds underline to the title */
+  text-decoration: underline;
 }
 
 /* Input boxes */
-.username-inputbox, .password-inputbox {
+.login-username-inputbox,
+.login-password-inputbox {
   width: 100%;
   margin-bottom: 20px;
 }
 
-.input-field {
+.login-input-field {
   font-family: 'Quicksand', sans-serif;
   width: 100%;
   padding: 12px;
@@ -112,7 +115,8 @@ body, html {
 }
 
 /* Button styling */
-.login-button, .signup-button {
+.login-button,
+.signup-button {
   font-family: 'Quicksand', sans-serif;
   font-weight: 700;
   width: 100%;
